<resources>
    <string name="app_name">TickerIO</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="time_holder">12:00:00 am</string>

    <!-- Location Data -->
    <string name="currLocation">User Location:</string>
    <string name="currTimeZone">User Time Zone</string>

    <!-- Clock Data -->
    <string name="zulu_time">Zulu Time</string>
    <string name="local_time">Local Time</string>

    <!-- Calendar Data -->
    <string name="julianDates">Julian Dates</string>

    <!-- Widget Data -->

    <string name="theme">Enable Dark Mode</string>
    <string name="theme_light">Enable Light Mode</string>
    <string name="time">%1$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->

    <string name="pref_help_header">Help &amp; Feedback</string>

    <string name="pref_user_title">Your Name</string>
    <string name="pref_user_subtitle">Provide the name you would like displayed</string>


    <string name="pref_title">Settings</string>
    <string name="pref_header">Choose a Theme</string>
    <string name="pref_feed_header">Send Feedback</string>
    <string name="pref_feed_subtitle">Report technical issues or suggest new features</string>

    <string name="pref_rate_header">Rate App</string>
    <string name="pref_rate_summary">Please take a moment to rate this application</string>

    <string name="pref_github_header">Source Code</string>
    <string name="pref_github_subtitle">View this and my other projects on Github!</string>


</resources>
